--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Browser Interceptor</string>
+    <string name="error_text">Error opening in Pocket</string>
+    <string name="about_activity_title">How to use Browser Interceptor</string>
+    <string name="share_app">Check out Browser Interceptor on the Play Store. %1$s</string>
 </resources>
